# dazhbog-gamayun

./: .gitignore  CMakeLists.txt  Makefile  README.md  bulkdiffdialog.cpp  bulkdiffdialog.h  gamayun.cpp  gamayun.h  lumina_client.cpp  lumina_client.h  lumina_codec.h  lumina_metadata.cpp  lumina_metadata.h  lumina_protocol.cpp  lumina_protocol.h  lumina_settings.cpp  lumina_settings.h  lumina_type_decoder.cpp  lumina_type_decoder.h  metadatasidebar.cpp  metadatasidebar.h  pattern_gen.cpp  pattern_gen.h  tlv_builder.h
src/analysis/: pattern_gen.cpp  pattern_gen.h
src/debug/: debug_dump.h
src/lumina/: apply.cpp  apply.h  client.cpp  client.h  codec.h  metadata.cpp  metadata.h  protocol.cpp  protocol.h  pulled_metadata.cpp  pulled_metadata.h  session.cpp  session.h  settings.cpp  settings.h  type_decoder.cpp  type_decoder.h
src/plugin/: plugin.cpp
src/ui/dialogs/: lumina_bulk_diff_dialog.cpp
src/ui/gamayun/: gamayun.h  gamayun_model.cpp  gamayun_table_view.cpp  gamayun_widget.cpp
tools/: README.md  compare_hashes.py  compare_instruction_masks.py  verify_our_algorithm.py
tools/compare/: compare_hashes.py  compare_instruction_masks.py
tools/verify/: verify_all_dumps.py  verify_our_algorithm.py
